Save events to db and get all events
